Fixed runtime, virtual thread feature enabled by environment variable.

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,13 +1,12 @@
+thread-mode: virtual
+
 spring:
 
   datasource:
     username: postgres
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=library
+    url: jdbc:postgresql://localhost:6000/postgres?currentSchema=library
     platform: postgres
     password: postgres
-    hikari:
-      maximumPoolSize: 20
-      minimum-idle: 20
 
 server:
   port: '8081'
