--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
-thread-mode: ${THREAD_MODE}
+thread-mode: ${THREAD_MODE:virtual}
 
 spring:
 
   datasource:
     username: postgres
-    url: jdbc:postgresql://db-service:5432/postgres?currentSchema=library
+    url: ${JDBC_URL:jdbc:postgresql://localhost:5432/postgres?currentSchema=library}
     platform: postgres
     password: postgres
 
@@ -19,7 +19,7 @@ spring:
       ddl-auto: none
 
 server:
-  port: '8080'
+  port: ${SERVER_PORT:8081}
   tomcat:
     mbeanregistry:
       enabled: true
