--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,4 +33,4 @@ management:
       show-details: always
   metrics:
     tags:
-      application: spring-jdbc
+      application: spring-boot-virtual-threads-jdk19
