--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,7 @@ thread-mode: ${THREAD_MODE:virtual}
 spring:
 
   datasource:
-    username: postgres
-    url: ${JDBC_URL:jdbc:postgresql://localhost:5432/postgres?currentSchema=library}
-    platform: postgres
-    password: postgres
+    url: ${JDBC_URL:jdbc:postgresql://localhost:5432/postgres?currentSchema=library&user=postgres&password=postgres}
 
   jpa:
     generate-ddl: 'false'
